--- a/composer.json
+++ b/composer.json
@@ -74,6 +74,7 @@
       "FondOfKudu\\Glue\\DiscountPromotionsRestApi\\": "bundles/discount-promotion-rest-api/src/FondOfKudu/Glue/DiscountPromotionsRestApi",
       "FondOfKudu\\Shared\\DiscountPromotionsRestApi\\": "bundles/discount-promotion-rest-api/src/FondOfKudu/Shared/DiscountPromotionsRestApi",
       "FondOfKudu\\Shared\\CountryZipcodeRestriction\\": "bundles/country-zipcode-restriction/src/FondOfKudu/Shared/CountryZipcodeRestriction",
+      "FondOfKudu\\Client\\CustomerPasswordUpdatedAtConnector\\": "bundles/customer-password-updated-at-connector/src/FondOfKudu/Client/CustomerPasswordUpdatedAtConnector",
       "FondOfKudu\\Shared\\CustomerPasswordUpdatedAtConnector\\": "bundles/customer-password-updated-at-connector/src/FondOfKudu/Shared/CustomerPasswordUpdatedAtConnector",
       "FondOfKudu\\Zed\\CustomerPasswordUpdatedAtConnector\\": "bundles/customer-password-updated-at-connector/src/FondOfKudu/Zed/CustomerPasswordUpdatedAtConnector",
       "FondOfKudu\\Client\\ProductImageStorageConnector\\": "bundles/product-image-storage-connector/src/FondOfKudu/Client/ProductImageStorageConnector",
@@ -109,6 +110,7 @@
       "FondOfKudu\\Zed\\CheckoutRestApiCountryConnector\\": "bundles/checkout-rest-api-country-connector/tests/FondOfKudu/Zed/CheckoutRestApiCountryConnector",
       "FondOfKudu\\Zed\\CheckoutDataProductCountryFilter\\": "bundles/checkout-data-product-country-filter/tests/FondOfKudu/Zed/CheckoutDataProductCountryFilter",
       "FondOfKudu\\Zed\\CheckoutDataGiftCartPaymentCountryFilter\\": "bundles/checkout-data-gift-cart-payment-country-filter/tests/FondOfKudu/Zed/CheckoutDataGiftCartPaymentCountryFilter",
+      "FondOfKudu\\Client\\CustomerPasswordUpdatedAtConnector\\": "bundles/customer-password-updated-at-connector/tests/FondOfKudu/Client/CustomerPasswordUpdatedAtConnector",
       "FondOfKudu\\Zed\\CustomerPasswordUpdatedAtConnector\\": "bundles/customer-password-updated-at-connector/tests/FondOfKudu/Zed/CustomerPasswordUpdatedAtConnector",
       "FondOfKudu\\Glue\\DiscountPromotionsRestApi\\": "bundles/discount-promotion-rest-api/tests/FondOfKudu/Glue/DiscountPromotionsRestApi",
       "FondOfKudu\\Zed\\OmsOrderConfirmation\\": "bundles/oms-order-confirmation/tests/FondOfKudu/Zed/OmsOrderConfirmation",
