--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
     "spryker/country": "^3.1.0 || ^4.0.0",
     "spryker/currency": "^3.8.0 || ^4.0.0",
     "spryker/customer": "^7.0.0",
+    "spryker/customers-rest-api": "^1.22",
     "spryker/data-import": "^1.3.0",
     "spryker/discount": "^9.34.0",
     "spryker/discount-promotions-rest-api": "^1.4.0",
