chore: customers rest api connector (#141)
---------

Co-authored-by: Pascal Fischert <p-fischer@gmx.ne>

--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
     "spryker/country": "^3.1.0 || ^4.0.0",
     "spryker/currency": "^3.8.0 || ^4.0.0",
     "spryker/customer": "^7.0.0",
+    "spryker/customers-rest-api": "^1.10.0",
     "spryker/data-import": "^1.3.0",
     "spryker/discount": "^9.34.0",
     "spryker/discount-promotions-rest-api": "^1.4.0",
@@ -56,6 +57,7 @@
     "fond-of-kudu/country-zipcode-restriction": "*",
     "fond-of-kudu/discount-promotion-rest-api": "*",
     "fond-of-kudu/customer-password-updated-at-connector": "*",
+    "fond-of-kudu/customers-rest-api-connector": "*",
     "fond-of-kudu/product-api-schedule-price-import": "*",
     "fond-of-kudu/product-image-storage-connector": "*",
     "fond-of-kudu/oms-order-confirmation": "*",
@@ -77,6 +79,8 @@
       "FondOfKudu\\Client\\CustomerPasswordUpdatedAtConnector\\": "bundles/customer-password-updated-at-connector/src/FondOfKudu/Client/CustomerPasswordUpdatedAtConnector",
       "FondOfKudu\\Shared\\CustomerPasswordUpdatedAtConnector\\": "bundles/customer-password-updated-at-connector/src/FondOfKudu/Shared/CustomerPasswordUpdatedAtConnector",
       "FondOfKudu\\Zed\\CustomerPasswordUpdatedAtConnector\\": "bundles/customer-password-updated-at-connector/src/FondOfKudu/Zed/CustomerPasswordUpdatedAtConnector",
+      "FondOfKudu\\Glue\\CustomersRestApiConnector\\": "bundles/customers-rest-api-connector/src/FondOfKudu/Glue/CustomersRestApiConnector",
+      "FondOfKudu\\Shared\\CustomersRestApiConnector\\": "bundles/customers-rest-api-connector/src/FondOfKudu/Shared/CustomersRestApiConnector",
       "FondOfKudu\\Client\\ProductImageStorageConnector\\": "bundles/product-image-storage-connector/src/FondOfKudu/Client/ProductImageStorageConnector",
       "FondOfKudu\\Shared\\ProductImageStorageConnector\\": "bundles/product-image-storage-connector/src/FondOfKudu/Shared/ProductImageStorageConnector",
       "FondOfKudu\\Shared\\Quote\\": "bundles/quote/src/FondOfKudu/Shared/Quote",
@@ -112,6 +116,7 @@
       "FondOfKudu\\Zed\\CheckoutDataGiftCartPaymentCountryFilter\\": "bundles/checkout-data-gift-cart-payment-country-filter/tests/FondOfKudu/Zed/CheckoutDataGiftCartPaymentCountryFilter",
       "FondOfKudu\\Client\\CustomerPasswordUpdatedAtConnector\\": "bundles/customer-password-updated-at-connector/tests/FondOfKudu/Client/CustomerPasswordUpdatedAtConnector",
       "FondOfKudu\\Zed\\CustomerPasswordUpdatedAtConnector\\": "bundles/customer-password-updated-at-connector/tests/FondOfKudu/Zed/CustomerPasswordUpdatedAtConnector",
+      "FondOfKudu\\Glue\\CustomersRestApiConnector\\": "bundles/customers-rest-api-connector/tests/FondOfKudu/Glue/CustomersRestApiConnector",
       "FondOfKudu\\Glue\\DiscountPromotionsRestApi\\": "bundles/discount-promotion-rest-api/tests/FondOfKudu/Glue/DiscountPromotionsRestApi",
       "FondOfKudu\\Zed\\OmsOrderConfirmation\\": "bundles/oms-order-confirmation/tests/FondOfKudu/Zed/OmsOrderConfirmation",
       "FondOfKudu\\Zed\\OmsRetryCaptureProcess\\": "bundles/oms-retry-capture-process/tests/FondOfKudu/Zed/OmsRetryCaptureProcess",
