--- a/bundles/kletties/codeception.yml
+++ b/bundles/kletties/codeception.yml
@@ -1,7 +1,4 @@
-namespace: fond-of-kudu/fond-of-kudu
-
-include:
-  - bundles/kletties
+namespace: fond-of-kudu/kletties
 
 suites:
   unit:
@@ -21,6 +18,8 @@ paths:
 
 coverage:
   enabled: true
+  include:
+    - src/*.php
 
 modules:
   enabled:
@@ -33,7 +32,7 @@ modules:
       generate_ide_auto_completion: false
 
 env:
-  monorepo:
+  standalone:
     modules:
       config:
         \FondOfCodeception\Module\Spryker:
@@ -41,9 +40,4 @@ env:
           generate_map_classes: true
           generate_propel_classes: true
           generate_ide_auto_completion: true
-          ide_auto_completion_source_directories:
-            './bundles/*/src/': '*/*/'
-            './vendor/fond-of-spryker/*/src/': '*/*/'
-          supported_source_identifiers:
-            - page
-            - conditional-availability-period
+  monorepo:
