chore: kletties api (#157)
* move fond-of-oryx/thirty-five-up-api to fond-of-kudu/kletties-api (wip)

---------

Co-authored-by: Pascal Fischert <p-fischer@gmx.ne>

--- a/codeception.yml
+++ b/codeception.yml
@@ -18,6 +18,7 @@ include:
   - bundles/oms-payone-error
   - bundles/discount-promotion-rest-api
   - bundles/kletties
+  - bundles/kletties-api
 
 suites:
   unit:
