--- a/codeception.yml
+++ b/codeception.yml
@@ -1,6 +1,24 @@
 namespace: fond-of-kudu/fond-of-kudu
 
 include:
+  - bundles/carts-rest-api
+  - bundles/checkout-data-gift-cart-payment-country-filter
+  - bundles/checkout-data-product-country-filter
+  - bundles/checkout-rest-api
+  - bundles/checkout-rest-api-country-connector
+  - bundles/country-zipcode-restriction
+  - bundles/customer-password-updated-at-connector
+  - bundles/customers-rest-api-connector
+  - bundles/product-attributes-cart-connector
+  - bundles/product-api-schedule-price-import
+  - bundles/product-image-storage-connector
+  - bundles/quote
+  - bundles/oms-order-confirmation
+  - bundles/oms-retry-capture-process
+  - bundles/oms-payone-error
+  - bundles/discount-promotion-rest-api
+  - bundles/kletties
+  - bundles/kletties-api
   - bundles/kletties-payment-connector
 
 suites:
