chore: fond-of-kudu/kletties-payment-connector (#158)
* move fond-of-oryx/thirty-five-up-payment-connector to fond-of-kudu/feature/kletties-payment-connector

---------

Co-authored-by: Pascal Fischert <p-fischer@gmx.ne>

--- a/codeception.yml
+++ b/codeception.yml
@@ -19,6 +19,7 @@ include:
   - bundles/discount-promotion-rest-api
   - bundles/kletties
   - bundles/kletties-api
+  - bundles/kletties-payment-connector
 
 suites:
   unit:
