--- a/codeception.yml
+++ b/codeception.yml
@@ -19,6 +19,7 @@ include:
   - bundles/discount-promotion-rest-api
   - bundles/kletties
   - bundles/kletties-api
+  - bundles/jellyfish-kletties
   - bundles/kletties-payment-connector
 
 suites:
