--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,8 @@
   "require": {
     "php": ">=8.0",
     "fond-of-kudu/kletties": "^1.0.0",
+    "fond-of-oryx/jellyfish-sales-order-extension": "^1.0.0 || ^2.0.0",
+    "fond-of-oryx/prepayment": "^1.0.0 || ^2.0.0",
     "fond-of-oryx/product-country-restriction-checkout-connector": "^2.0.1",
     "spryker-eco/payone": "^4.4.2",
     "spryker/api": "^0.4.0",
@@ -30,6 +32,7 @@
     "spryker/locale": "^2.0.0 || ^3.0.0 || ^4.0.0",
     "spryker/oms": ">= 8.0.0",
     "spryker/oms-extension": "^1.3",
+    "spryker/payment-extension": "^1.0.0",
     "spryker/price-product": "^4.0.0",
     "spryker/price-product-schedule": "^2.0.0",
     "spryker/price-product-storage": "^4.0.0",
@@ -40,12 +43,10 @@
     "spryker/product-storage": "^1.13.0",
     "spryker/product-storage-extension": "^1.0.0",
     "spryker/quote": "^2.0.0",
+    "spryker/security-blocker": "^1.2",
     "spryker/storage": "^3.20.0",
     "spryker/store": "^1.1.0",
-    "spryker/synchronization": "^1.16",
-    "fond-of-oryx/jellyfish-sales-order-extension": "^1.0.0 || ^2.0.0",
-    "spryker/payment-extension": "^1.0.0",
-    "fond-of-oryx/prepayment": "^1.0.0 || ^2.0.0"
+    "spryker/synchronization": "^1.16"
   },
   "require-dev": {
     "fond-of-codeception/spryker": "*",
@@ -120,7 +121,10 @@
       "FondOfKudu\\Zed\\JellyfishKletties\\": "bundles/jellyfish-kletties/src/FondOfKudu/Zed/JellyfishKletties",
       "FondOfKudu\\Shared\\JellyfishKletties\\": "bundles/jellyfish-kletties/src/FondOfKudu/Shared/JellyfishKletties",
       "FondOfKudu\\Zed\\KlettiesPaymentConnector\\": "bundles/kletties-payment-connector/src/FondOfKudu/Zed/KlettiesPaymentConnector",
-      "FondOfKudu\\Shared\\KlettiesPaymentConnector\\": "bundles/kletties-payment-connector/src/FondOfKudu/Shared/KlettiesPaymentConnector"
+      "FondOfKudu\\Shared\\KlettiesPaymentConnector\\": "bundles/kletties-payment-connector/src/FondOfKudu/Shared/KlettiesPaymentConnector",
+      "FondOfKudu\\Client\\SecurityBlockerReset\\": "bundles/security-blocker-reset/src/FondOfKudu/Client/SecurityBlockerReset",
+      "FondOfKudu\\Glue\\SecurityBlockerReset\\": "bundles/security-blocker-reset/src/FondOfKudu/Glue/SecurityBlockerReset",
+      "FondOfKudu\\Shared\\SecurityBlockerReset\\": "bundles/security-blocker-reset/src/FondOfKudu/Shared/SecurityBlockerReset"
     }
   },
   "autoload-dev": {
