--- a/bundles/security-blocker-reset/composer.json
+++ b/bundles/security-blocker-reset/composer.json
@@ -10,7 +10,8 @@
   ],
   "require": {
     "php": ">=8.0",
-    "spryker/security-blocker": "^1.0.0"
+    "spryker/security-blocker": "^1.0.0",
+    "spryker/glue-application": "^1.2.0"
   },
   "require-dev": {
     "fond-of-codeception/spryker": "*",
