feat: add order pre save hook

--- a/bundles/customer-merge-guest-order/composer.json
+++ b/bundles/customer-merge-guest-order/composer.json
@@ -10,6 +10,7 @@
   ],
   "require": {
     "php": ">=8.0",
+    "spryker/checkout-extension": "^1.0.0",
     "spryker/customers-rest-api-extension": "^1.0.0"
   },
   "require-dev": {
