--- a/bundles/customer-merge-guest-order/composer.json
+++ b/bundles/customer-merge-guest-order/composer.json
@@ -13,6 +13,7 @@
     "spryker/auth-rest-api-extension": "^1.0.0",
     "spryker/customer": "^7.0.0",
     "spryker/customers-rest-api-extension": "^1.0.0",
+    "spryker/glue-application": "^1.0.0",
     "spryker/sales": "^11.0.0"
   },
   "require-dev": {
