--- a/composer.json
+++ b/composer.json
@@ -51,8 +51,8 @@
   "require-dev": {
     "fond-of-codeception/spryker": "*",
     "rector/rector": "*",
-    "spryker/code-sniffer": "*",
-    "spryker-sdk/phpstan-spryker": "*"
+    "spryker-sdk/phpstan-spryker": "*",
+    "spryker/code-sniffer": "*"
   },
   "replace": {
     "fond-of-kudu/carts-rest-api": "*",
@@ -128,6 +128,9 @@
       "FondOfKudu\\Glue\\SecurityBlockerReset\\": "bundles/security-blocker-reset/src/FondOfKudu/Glue/SecurityBlockerReset",
       "FondOfKudu\\Shared\\SecurityBlockerReset\\": "bundles/security-blocker-reset/src/FondOfKudu/Shared/SecurityBlockerReset",
       "FondOfKudu\\Glue\\VerifiedCustomer\\": "bundles/verified-customer/src/FondOfKudu/Glue/VerifiedCustomer",
+      "FondOfKudu\\Zed\\VerifiedCustomer\\": "bundles/verified-customer/src/FondOfKudu/Zed/VerifiedCustomer",
+      "FondOfKudu\\Client\\VerifiedCustomer\\": "bundles/verified-customer/src/FondOfKudu/Client/VerifiedCustomer",
+      "FondOfKudu\\Shared\\VerifiedCustomer\\": "bundles/verified-customer/src/FondOfKudu/Shared/VerifiedCustomer",
       "FondOfKudu\\Glue\\CustomerMergeGuestOrder\\": "bundles/customer-merge-guest-order/src/FondOfKudu/Glue/CustomerMergeGuestOrder",
       "FondOfKudu\\Client\\CustomerMergeGuestOrder\\": "bundles/customer-merge-guest-order/src/FondOfKudu/Client/CustomerMergeGuestOrder",
       "FondOfKudu\\Zed\\CustomerMergeGuestOrder\\": "bundles/customer-merge-guest-order/src/FondOfKudu/Zed/CustomerMergeGuestOrder",
@@ -160,6 +163,7 @@
       "FondOfKudu\\Client\\SecurityBlockerReset\\": "bundles/security-blocker-reset/tests/FondOfKudu/Client/SecurityBlockerReset",
       "FondOfKudu\\Glue\\SecurityBlockerReset\\": "bundles/security-blocker-reset/tests/FondOfKudu/Glue/SecurityBlockerReset",
       "FondOfKudu\\Glue\\VerifiedCustomer\\": "bundles/verified-customer/src/FondOfKudu/Glue/VerifiedCustomer",
+      "FondOfKudu\\Zed\\VerifiedCustomer\\": "bundles/verified-customer/src/FondOfKudu/Zed/VerifiedCustomer",
       "FondOfKudu\\Glue\\CustomerMergeGuestOrder\\": "bundles/customer-merge-guest-order/src/FondOfKudu/Glue/CustomerMergeGuestOrder",
       "FondOfKudu\\Client\\CustomerMergeGuestOrder\\": "bundles/customer-merge-guest-order/src/FondOfKudu/Client/CustomerMergeGuestOrder",
       "FondOfKudu\\Zed\\CustomerMergeGuestOrder\\": "bundles/customer-merge-guest-order/src/FondOfKudu/Zed/CustomerMergeGuestOrder",
