--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
     "spryker/api-query-builder": "^0.1.5",
     "spryker/cart-extension": "^4.3",
     "spryker/carts-rest-api": "^5.0.0",
+    "spryker/carts-rest-api-extension": "^1.0.0",
     "spryker/checkout-rest-api": "^3.0.0",
     "spryker/checkout-rest-api-extension": "^1.5.0",
     "spryker/country": "^3.1.0 || ^4.0.0",
