add catalog-search-connector module

--- a/codeception.yml
+++ b/codeception.yml
@@ -2,6 +2,7 @@ namespace: fond-of-kudu/fond-of-kudu
 
 include:
   - bundles/carts-rest-api
+  - bundles/catalog-search-connector
   - bundles/checkout-data-gift-cart-payment-country-filter
   - bundles/checkout-data-product-country-filter
   - bundles/checkout-rest-api
