--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
     "spryker/cart-extension": "^4.3",
     "spryker/carts-rest-api": "^5.0.0",
     "spryker/carts-rest-api-extension": "^1.0.0",
+    "spryker/catalog": "^5.10",
     "spryker/checkout-rest-api": "^3.0.0",
     "spryker/checkout-rest-api-extension": "^1.5.0",
     "spryker/country": "^3.1.0 || ^4.0.0",
@@ -40,6 +41,7 @@
     "spryker/product": "^6.0.0",
     "spryker/product-extension": "^1.1.0",
     "spryker/product-image-storage": "^1.3.0",
+    "spryker/product-page-search-extension": "^1.2.0",
     "spryker/product-resource-alias-storage": "^1.0.0",
     "spryker/product-storage": "^1.13.0",
     "spryker/product-storage-extension": "^1.0.0",
@@ -57,6 +59,7 @@
   },
   "replace": {
     "fond-of-kudu/carts-rest-api": "*",
+    "fond-of-kudu/catalog-search-connector": "*",
     "fond-of-kudu/checkout-rest-api": "*",
     "fond-of-kudu/checkout-rest-api-country-connector": "*",
     "fond-of-kudu/checkout-data-gift-cart-payment-country-filter": "*",
@@ -87,6 +90,9 @@
       "FondOfKudu\\Zed\\CartsRestApi\\": "bundles/carts-rest-api/src/FondOfKudu/Zed/CartsRestApi",
       "FondOfKudu\\Shared\\CartsRestApi\\": "bundles/carts-rest-api/src/FondOfKudu/Shared/CartsRestApi",
       "FondOfKudu\\Client\\CartsRestApi\\": "bundles/carts-rest-api/src/FondOfKudu/Client/CartsRestApi",
+      "FondOfKudu\\Client\\CatalogSearchConnector\\": "bundles/catalog-search-connector/src/FondOfKudu/Client/CatalogSearchConnector",
+      "FondOfKudu\\Shared\\CatalogSearchConnector\\": "bundles/catalog-search-connector/src/FondOfKudu/Shared/CatalogSearchConnector",
+      "FondOfKudu\\Zed\\CatalogSearchConnector\\": "bundles/catalog-search-connector/src/FondOfKudu/Zed/CatalogSearchConnector",
       "FondOfKudu\\Zed\\CountryZipcodeRestriction\\": "bundles/country-zipcode-restriction/src/FondOfKudu/Zed/CountryZipcodeRestriction",
       "FondOfKudu\\Glue\\DiscountPromotionsRestApi\\": "bundles/discount-promotion-rest-api/src/FondOfKudu/Glue/DiscountPromotionsRestApi",
       "FondOfKudu\\Shared\\DiscountPromotionsRestApi\\": "bundles/discount-promotion-rest-api/src/FondOfKudu/Shared/DiscountPromotionsRestApi",
@@ -143,6 +149,7 @@
       "FondOfKudu\\Zed\\CartsRestApi\\": "bundles/carts-rest-api/tests/FondOfKudu/Zed/CartsRestApi",
       "FondOfKudu\\Zed\\CountryZipcodeRestriction\\": "bundles/country-zipcode-restriction/tests/FondOfKudu/Zed/CountryZipcodeRestriction",
       "FondOfKudu\\Client\\ProductImageStorageConnector\\": "bundles/product-image-storage-connector/tests/FondOfKudu/Client/ProductImageStorageConnector",
+      "FondOfKudu\\Zed\\CatalogSearchConnector\\": "bundles/catalog-search-connector/tests/FondOfKudu/Zed/CatalogSearchConnector",
       "FondOfKudu\\Zed\\CheckoutRestApi\\": "bundles/checkout-rest-api/tests/FondOfKudu/Zed/CheckoutRestApi",
       "FondOfKudu\\Glue\\CheckoutRestApiCountryConnector\\": "bundles/checkout-rest-api-country-connector/tests/FondOfKudu/Glue/CheckoutRestApiCountryConnector",
       "FondOfKudu\\Zed\\CheckoutRestApiCountryConnector\\": "bundles/checkout-rest-api-country-connector/tests/FondOfKudu/Zed/CheckoutRestApiCountryConnector",
