--- a/composer.json
+++ b/composer.json
@@ -17,10 +17,11 @@
     "spryker-eco/payone": "^4.4.2",
     "spryker/api": "^0.4.0",
     "spryker/api-query-builder": "^0.1.5",
+    "spryker/availability": "^9.0.0",
     "spryker/cart-extension": "^4.3",
     "spryker/carts-rest-api": "^5.0.0",
     "spryker/carts-rest-api-extension": "^1.0.0",
-    "spryker/catalog": "^5.10",
+    "spryker/catalog": "^5.2.0",
     "spryker/checkout-rest-api": "^3.0.0",
     "spryker/checkout-rest-api-extension": "^1.5.0",
     "spryker/country": "^3.1.0 || ^4.0.0",
