--- a/bundles/catalog-search-connector/composer.json
+++ b/bundles/catalog-search-connector/composer.json
@@ -10,8 +10,10 @@
   ],
   "require": {
     "php": ">=8.0",
-    "spryker/catalog": "^5.10",
-    "spryker/product-page-search-extension": "^1.2.0"
+    "spryker/availability": "^9.0.0",
+    "spryker/catalog": "^5.2.0",
+    "spryker/product-page-search-extension": "^1.2.0",
+    "spryker/store": "^1.11.0"
   },
   "require-dev": {
     "fond-of-codeception/spryker": "*",
