--- a/bundles/catalog-search-connector/composer.json
+++ b/bundles/catalog-search-connector/composer.json
@@ -13,7 +13,7 @@
     "spryker/availability": "^9.0.0",
     "spryker/catalog": "^5.2.0",
     "spryker/product-page-search-extension": "^1.2.0",
-    "spryker/search-extension": "1.0.0",
+    "spryker/search-extension": "^1.3.0",
     "spryker/store": "^1.11.0"
   },
   "require-dev": {
