--- a/composer.json
+++ b/composer.json
@@ -48,7 +48,7 @@
     "spryker/product-storage-extension": "^1.0.0",
     "spryker/quote": "^2.0.0",
     "spryker/security-blocker": "^1.2",
-    "spryker/search-extension": "1.0.0",
+    "spryker/search-extension": "^1.3.0",
     "spryker/storage": "^3.20.0",
     "spryker/store": "^1.1.0",
     "spryker/synchronization": "^1.16"
