--- a/composer.json
+++ b/composer.json
@@ -47,6 +47,7 @@
     "spryker/product-storage": "^1.13.0",
     "spryker/product-storage-extension": "^1.0.0",
     "spryker/quote": "^2.0.0",
+    "spryker/sales-extension": "^1.6.0",
     "spryker/security-blocker": "^1.2",
     "spryker/search-extension": "^1.3.0",
     "spryker/storage": "^3.20.0",
